--- a/css/less/param.less
+++ b/css/less/param.less
@@ -1,11 +1,11 @@
 //normal theme
-@inputborder:1px solid gray;
-@inputhoverborder:1px solid blue;
+@inputborder:1px solid #5f7d8c;
+@inputhoverborder:1px solid #c3c3c3;
 @inputborderradious:3px;
 @inputpadding:8px 12px;
 //search component
-@searchborder:1px solid gray;
-@searchhoverborder:1px solid gray;
+@searchborder:1px solid #5f7d8c;
+@searchhoverborder:1px solid #c3c3c3;
 @searchfocusborder:1px solid black;
 @searchheight:40px;
 @searchborderradius:@searchheight/2;
