--- a/css/less/component.less
+++ b/css/less/component.less
@@ -29,7 +29,7 @@ label input{
 textarea,input[type="text"],input[type="password"]{
     border: @inputborder;
     padding: 8px 12px;
-    font-size: 1rem;
+    font-size: .8rem;
     border-radius: 3px;
     background: transparent;
     &:hover{
